Set recommended value for Referrer-Policy
https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Referrer-Policy

--- a/tests_suite.yml
+++ b/tests_suite.yml
@@ -69,7 +69,7 @@ testcases:
         assertions:
           - result.statuscode ShouldEqual 200
           - result.headers.Referrer-Policy ShouldNotBeNil
-          - result.headers.Referrer-Policy ShouldEqual "no-referrer"
+          - result.headers.Referrer-Policy ShouldEqual "strict-origin-when-cross-origin"
   - name: Clear-Site-Data
     steps:
       - type: http
