--- a/tests_suite.yml
+++ b/tests_suite.yml
@@ -14,7 +14,9 @@ testcases:
         assertions:
           - result.statuscode ShouldEqual 200
           - result.headers.Strict-Transport-Security ShouldNotBeNil
-          - result.headers.Strict-Transport-Security ShouldBeIn "max-age=31536000; includeSubDomains" "max-age=31536000; includeSubDomains; preload"
+          - or:
+            - result.headers.Strict-Transport-Security ShouldEqual "max-age=31536000; includeSubDomains"
+            - result.headers.Strict-Transport-Security ShouldEqual "max-age=31536000; includeSubDomains; preload"
   - name: X-Frame-Options
     steps:
       - type: http
